<resources>


    <string name="log_out">Log out</string>

    <string name="id">EMPLOYEE ID</string>
    <string name="e_mail">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="register">Register</string>
    <string name="e_name">Name</string>
    <string name="app_name">MyLogin</string>
    <string name="user_details">Home</string>
    <string name="name">NAME</string>
    <string name="age">AGE</string>
    <string name="place">PLACE</string>
    <string name="designation">DESIGNATION</string>
    <string name="add">SUBMIT</string>
    <string name="delete">DELETE</string>
    <string name="update">UPDATE</string>
    <string name="get">GET ALL</string>
    <string name="profile">Profile image</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_home">Home</string>
    <string name="menu_movie">Movie List</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Log out</string>
    <string name="Product">Product Name</string>
    <string name="category">Category</string>
    <string name="spinner_title">Category</string>
    <string name="default_poster">http://www.imdb.com/images/nopicture/medium/film.png</string>
    <string name="network_not_available">Network not available! Please connect to the Internet.</string>
    <string name="snackbar_title_not_found">The movie title you entered was not found</string>
    <string name="snackbar_title_empty">Please enter a movie title</string>
</resources>
